--- a/package.json
+++ b/package.json
@@ -8,13 +8,17 @@
     "bootstrap": "^4.1.3",
     "bulma": "^0.7.1",
     "jquery": "^3.3.1",
+    "jwt-decode": "^2.2.0",
     "npm": "^6.0.1",
     "popper.js": "^1.14.4",
-    "react": "^16.3.2",
-    "react-bootstrap": "^0.32.1",
-    "react-dom": "^16.3.2",
+    "react": "^16.4.2",
+    "react-bootstrap": "^0.32.3",
+    "react-dom": "^16.4.2",
     "react-redux": "^5.0.7",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
+    "reactstrap": "^6.4.0",
     "redux": "^4.0.0",
     "yarn": "^1.6.0"
   },
@@ -26,7 +30,7 @@
   },
   "devDependencies": {
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "eslint": "^5.3.0",
+    "eslint": "^5.4.0",
     "eslint-plugin-react-redux": "^2.3.0",
     "redux-devtools": "^3.4.1"
   }
