--- a/guttavask-backend/src/main/resources/application.properties
+++ b/guttavask-backend/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.datasource.platform=postgres
 spring.datasource.url=jdbc:postgresql://localhost:5434/vaskeliste
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
