--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "guttavask",
-  "version": "0.1.0",
+  "version": "9001.0.0",
   "private": true,
   "dependencies": {
     "actions": "^1.3.0",
@@ -9,7 +9,8 @@
     "bulma": "^0.7.1",
     "jquery": "^3.3.1",
     "jwt-decode": "^2.2.0",
-    "npm": "^6.0.1",
+    "lodash": "latest",
+    "npm": "^6.4.1",
     "popper.js": "^1.14.4",
     "react": "^16.4.2",
     "react-bootstrap": "^0.32.3",
@@ -17,7 +18,7 @@
     "react-redux": "^5.0.7",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.4",
+    "react-scripts": "^1.1.5",
     "reactstrap": "^6.4.0",
     "redux": "^4.0.0",
     "yarn": "^1.6.0"
