--- a/guttavask-backend/src/main/resources/application.properties
+++ b/guttavask-backend/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 spring.datasource.platform=postgres
-spring.datasource.url=jdbc:postgresql://localhost:5434/vaskeliste
-spring.jpa.hibernate.ddl-auto=create
+spring.datasource.url=jdbc:postgresql://localhost:5432/gvtest
+spring.datasource.username=halvor
+spring.datasource.password=ppass 
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
