--- a/guttavask-backend/pom.xml
+++ b/guttavask-backend/pom.xml
@@ -165,6 +165,11 @@
             <artifactId>spring-security-config</artifactId>
             <version>5.0.7.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.3.0</version>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
