--- a/guttavask-backend/src/main/resources/application.properties
+++ b/guttavask-backend/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.datasource.username=halvor
 spring.datasource.password=ppass 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
+server.port = 8090
