--- a/package.json
+++ b/package.json
@@ -31,8 +31,11 @@
   },
   "devDependencies": {
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "eslint": "^5.4.0",
+    "eslint": "^5.5.0",
+    "eslint-config-prettier": "^3.0.1",
+    "eslint-plugin-prettier": "^2.6.2",
     "eslint-plugin-react-redux": "^2.3.0",
+    "prettier": "^1.14.2",
     "redux-devtools": "^3.4.1"
   }
 }
