--- a/guttavask-backend/src/main/resources/application.properties
+++ b/guttavask-backend/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.datasource.platform=postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/gvtest
-spring.datasource.username=halvor
-spring.datasource.password=ppass 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
+spring.datasource.url=jdbc:mysql://gvdb-mysql.c2muodqsivrc.eu-west-2.rds.amazonaws.com:3306/GvDBmysql?pinGlobalTxToPhysicalConnection=true
+spring.datasource.username=halvorbm
+spring.datasource.password=PPaass11
+server.port=5000
+
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
-server.port = 8090
