--- a/guttavask-backend/src/main/resources/application.properties
+++ b/guttavask-backend/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://gvdb-mysql.c2muodqsivrc.eu-west-2.rds.amazonaws.com:3306/GvDBmysql?pinGlobalTxToPhysicalConnection=true
 spring.datasource.username=halvorbm
 spring.datasource.password=PPaass11
