--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "start:production": "npm run build && serve build -l 8081"
   },
   "devDependencies": {
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
